# ft_vox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: Shader.cpp  Timer.hpp  Window.cpp  Window.hpp  ft_engine.hpp
src/engine/input/: Input.cpp  Input.hpp  KeyHandler.cpp  KeyHandler.hpp  MouseHandler.cpp  MouseHandler.hpp
src/engine/ogl_debug/: Debug.cpp  Debug.hpp
src/engine/render/: Camera.cpp  Camera.hpp  Cube.hpp  FPSCamera.hpp  Material.hpp  Shader.cpp  Shader.hpp  Texture2D.cpp  Texture2D.hpp  Texture2DArray.cpp  Texture2DArray.hpp  VoxelBatchRenderer.cpp  VoxelBatchRenderer.hpp
src/engine/render/buffers/: VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  Vertex.hpp
src/engine/render/camera/: FPSCamera.cpp
src/engine/resource_manager/: ResourceManager.cpp  ResourceManager.hpp  Resources.hpp
src/sandbox/: main.cpp
src/sandbox/assets/: basic.glsl
src/sandbox/src/: main.cpp
